	  cob_inspect_converting): early exit if nothing to inspect
	* strings.c (cob_init_strings, cob_inspect_init, cob_unstring_init):
	  don't pre-allocate inspect_mark, inspect_repdata, dlm_list but
	  allocate with minimal default size on first use

2022-04-08  Simon Sobisch <simonsobisch@gnu.org>

	* strings.c (do_mark, is_marked): extracted from inspect_common
	* strings.c (set_inspect_mark): new function to remember actual min/ma
	  positions of the marker bytes to remove the need to initialize huge
	  areas when we commonly have set only markers in the first n bytes
	  (or nothing), especially for INSPECT LEADING/TRAILING
	* strings.c (cob_inspect_init, cob_inspect_characters, is_marked): use of
	  the now definitive check "did we mark anything" instead of checking all
	  marker bytes by testing for "inspect_mark[inspect_mark_min] != 0"
	* strings.c (is_marked): check for possible/definitel overlap of
	  check and marker range before checking all marker bytes in range
	* strings.c: increase use of direct pointer comparisons instead of
	  accessing char arrays or its positions for INSPECT

2022-04-01  Simon Sobisch <simonsobisch@gnu.org>

	* common.h [__DJGPP__]: use DOS path specs

2022-01-30  Simon Sobisch <simonsobisch@gnu.org>

	* call.c (set_resolve_error): distinguish between exceptions
	  COB_EC_PROGRAM_NOT_FOUND and COB_EC_FUNCTION_NOT_FOUND
	* fileio.c (indexed_open, join_environment) [WITH_DB]: return
	  file sharing error if BDB environment cannot be joined
	* fileio.c (cob_sys_check_file_exist, cob_get_sort_tempfile): return
	  appropriate error code on errors instead of runtime exit
	* screenio.c: preparations to later raise exceptions in error cases
	* common.c (cob_sys_exit_proc): fixes to set / query priority and
	  return code in case of errors as "per documentation"
	* common.c, coblocal.h: added cob_hard_failure + cob_hard_failure_internal
	* call.c, numeric.c, fileio.c, screenio.c: use of cob_hard_failure and